# BiomechAI

./: LICENSE  README.md  pyproject.toml  requirements.txt
docs/: Documentation_Eng.txt  dox.txt
models_and_interfaces/: Classic_Pendulum_EK_control.py  InvertedPendulumWalker.py  Inverted_Pendulum_Cart_Walk_COM_control.py
models_and_interfaces/interface/: Ream.py
webapp/biomechi/: README.md  angular.json  package-lock.json  package.json
webapp/biomechi/backend/: main.py
webapp/biomechi/backend/algorithms/: REAM.py  process_gait.py  process_knee.py
webapp/biomechi/backend/models/: Classical_Pendulum.py  Inverted_Pendulum_Cart_Walk_COM_control.py
webapp/biomechi/src/: index.html
webapp/biomechi/src/app/: app.component.css  app.component.html  app.component.spec.ts  app.component.ts  app.module.ts
webapp/biomechi/src/app/video/services/: file-name.service.ts
